update frontend pages

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- OGP -->
-    <meta property="og:url" content="https://light.peace-tea.jp/rt/bnt/">
+    <meta property="og:url" content="https://light2.peace-tea.jp/about_basic_needs">
     <meta property="og:title" content="基本的欲求診断(Basic Needs Assessment)&nbsp;〜大切な人と、ご一緒に〜" >
-    <meta property="og:image" content="/img/ogp.jpg">
+    <meta property="og:image" content="https://light2.peace-tea.jp/ogp.jpg">
     <meta property="og:description" content="基本的欲求診断で、自分や大切な人の欲求の強弱を知りましょう。幸せな毎日を送る基本は自分自身のことを知り、大切な人のことを知ることから始まります。">
     <meta property="og:type" content="article">
     <meta property="fb:app_id" content="647251629304856">
